manifest/hello-kube/deployment-hello-kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kube
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: hello-kube
  template:
    metadata:
      labels:
        app: hello-kube
    spec:
      containers:
      - image: paulbouwer/hello-kubernetes:1.5
        name: hello-kube
        ports:
        - containerPort: 8080
