manifest/hello-kube/svc-hello-kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kube
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kube
