manifest/hello-kube/ingress-hello-kube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kube-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: hello-kube.test.kongkang.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kube
            port:
              number: 80
